Change test case name for ppc64el.
"uname -a" command shows "ppc64le". It's not "ppc64el"

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ matrix:
       env:
         - BUILD_TYPE="arch-simple"
         - ARCH=armhf
-    - name: ppc64el-linux-simple
+    - name: ppc64le-linux-simple
       sudo: required
       env:
         - BUILD_TYPE="arch-simple"
