--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,31 @@ language: generic
 services: docker
 sudo: false
 os: linux
+
+.com.github.junaruga.ci-multi-arch-test.matrix-definitions:
+  - &test_arch_simple
+    install:
+      - docker run --rm --privileged multiarch/qemu-user-static:register --reset
+    script:
+      - |
+        IMAGE=""
+        if [ "${OS_NAME}" = "ubuntu" -o "${OS_NAME}" = "debian" ]; then
+          IMAGE="multiarch/${OS_NAME}-debootstrap:${ARCH}-${OS_VERSION}"
+        elif [ "${OS_NAME}" = "centos" ]; then
+          IMAGE="multiarch/${OS_NAME}:${OS_VERSION}-${ARCH}-iso"
+        elif [ "${OS_NAME}" = "fedora" ]; then
+          IMAGE="multiarch/${OS_NAME}:${OS_VERSION}-${ARCH}"
+        fi
+        docker run --rm -t "${IMAGE}" uname -a
+  - &test_no_arch
+    install: true
+    script: ./sample_test.sh
+
 matrix:
   include:
     # Intel, 64-bit, Little-endian
     - name: x86_64-linux
+      <<: *test_no_arch
     # Intel, 32-bit, Little-endian
     - name: i386-linux
       sudo: required
@@ -25,6 +46,7 @@ matrix:
     # PowerPC, 64-bit, Little-endian
     - name: ppc64le-linux
       os: linux-ppc64le
+      <<: *test_no_arch
     # IBM Z and LinuxONE, 64-bit, Big-endian
     - name: s390x-linux
       sudo: required
@@ -35,10 +57,10 @@ matrix:
     - name: s390x-linux-simple
       sudo: required
       env:
-        - BUILD_TYPE="arch-simple"
         - OS_NAME=debian
         - OS_VERSION=jessie
         - ARCH=s390x
+      <<: *test_arch_simple
       # You can run non-important job only for cron mode
       # or any specific environment variable (ex: CI_CRON: 1) is set.
       if: type = cron OR env(CI_CRON) = 1
@@ -46,88 +68,56 @@ matrix:
     - name: centos-aarch64-linux-simple
       sudo: required
       env:
-        - BUILD_TYPE="arch-simple"
         - OS_NAME=centos
         - OS_VERSION=7
         - ARCH=aarch64
+      <<: *test_arch_simple
     # PowerPC, 64-bit, Big-endian
     - name: centos-ppc64-linux-simple
       sudo: required
       env:
-        - BUILD_TYPE="arch-simple"
         - OS_NAME=centos
         - OS_VERSION=7
         - ARCH=ppc64
+      <<: *test_arch_simple
     # ARM, 64-bit, Little-endian
     - name: fedora-aarch64-linux-simple
       sudo: required
       env:
-        - BUILD_TYPE="arch-simple"
         - OS_NAME=fedora
         - OS_VERSION=25
         - ARCH=aarch64
+      <<: *test_arch_simple
     # PowerPC, 64-bit, Big-endian
     - name: fedora-ppc64-linux-simple
       sudo: required
       env:
-        - BUILD_TYPE="arch-simple"
         - OS_NAME=fedora
         - OS_VERSION=25
         - ARCH=ppc64
+      <<: *test_arch_simple
   allow_failures:
     - name: centos-ppc64-linux-simple
   fast_finish: true
-install:
+before_install:
   - "OS_NAME=${OS_NAME:-ubuntu}"
   - "OS_VERSION=${OS_VERSION:-bionic}"
   - "echo OS_NAME=${OS_NAME} OS_VERSION=${OS_VERSION} ARCH=${ARCH} BUILD_TYPE=${BUILD_TYPE}"
-  # Prepare QEMU.
-  # https://github.com/multiarch/qemu-user-static
-  - |
-    if [ "${ARCH}" != "" ]; then
-      docker run --rm --privileged multiarch/qemu-user-static:register --reset
-    fi
-  # Build container image.
-  - |
-    if [ "${ARCH}" != "" ]; then
-      if [ "${BUILD_TYPE}" = "" ]; then
-        docker build --rm -t sample \
-          --build-arg OS_NAME=${OS_NAME} \
-          --build-arg OS_VERSION=${OS_VERSION} \
-          --build-arg ARCH=${ARCH} \
-          .
-      fi
-    fi
 before_script:
   # Show environment.
   - uname -a
   - id
   - pwd
+install:
+  - docker run --rm --privileged multiarch/qemu-user-static:register --reset
+  - |
+    docker build --rm -t sample \
+      --build-arg OS_NAME=${OS_NAME} \
+      --build-arg OS_VERSION=${OS_VERSION} \
+      --build-arg ARCH=${ARCH} \
+      .
 script:
-  - |
-    if [ "${ARCH}" != "" ]; then
-      if [ "${BUILD_TYPE}" = "" ]; then
-        docker run --rm -t sample ./sample_test.sh
-      fi
-    fi
-  - |
-    if [ "${ARCH}" != "" ]; then
-      if [ "${BUILD_TYPE}" = "arch-simple" ]; then
-        IMAGE=""
-        if [ "${OS_NAME}" = "ubuntu" -o "${OS_NAME}" = "debian" ]; then
-          IMAGE="multiarch/${OS_NAME}-debootstrap:${ARCH}-${OS_VERSION}"
-        elif [ "${OS_NAME}" = "centos" ]; then
-          IMAGE="multiarch/${OS_NAME}:${OS_VERSION}-${ARCH}-iso"
-        elif [ "${OS_NAME}" = "fedora" ]; then
-          IMAGE="multiarch/${OS_NAME}:${OS_VERSION}-${ARCH}"
-        fi
-        docker run --rm -t "${IMAGE}" uname -a
-      fi
-    fi
-  - |
-    if [ "${ARCH}" = "" ]; then
-      ./sample_test.sh
-    fi
+  - docker run --rm -t sample ./sample_test.sh
 branches:
   only:
     - master
