--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ os: linux
         elif [ "${OS_NAME}" = "fedora" ]; then
           IMAGE="multiarch/${OS_NAME}:${OS_VERSION}-${ARCH}"
         fi
+        echo "IMAGE: ${IMAGE}"
         docker run --rm -t "${IMAGE}" uname -a
   - &test_no_arch
     install: true
