--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ os: linux
         elif [ "${OS_NAME}" = "fedora" ]; then
           IMAGE="multiarch/${OS_NAME}:${OS_VERSION}-${ARCH}"
         fi
-        echo "IMAGE: ${IMAGE}"
+      - "echo IMAGE: ${IMAGE}"
+      - |
         docker run --rm -t "${IMAGE}" uname -a
   - &test_no_arch
     install: true
@@ -66,6 +67,12 @@ matrix:
       # or any specific environment variable (ex: CI_CRON: 1) is set.
       if: type = cron OR env(CI_CRON) = 1
     # ARM, 64-bit, Little-endian
+    - name: centos-aarch64-linux
+      sudo: required
+      env:
+        - OS_NAME=centos
+        - OS_VERSION=7
+        - ARCH=aarch64
     - name: centos-aarch64-linux-simple
       sudo: required
       env:
@@ -74,6 +81,12 @@ matrix:
         - ARCH=aarch64
       <<: *test_arch_simple
     # PowerPC, 64-bit, Big-endian
+    - name: centos-ppc64-linux
+      sudo: required
+      env:
+        - OS_NAME=centos
+        - OS_VERSION=7
+        - ARCH=ppc64
     - name: centos-ppc64-linux-simple
       sudo: required
       env:
@@ -82,6 +95,12 @@ matrix:
         - ARCH=ppc64
       <<: *test_arch_simple
     # ARM, 64-bit, Little-endian
+    - name: fedora-aarch64-linux
+      sudo: required
+      env:
+        - OS_NAME=fedora
+        - OS_VERSION=25
+        - ARCH=aarch64
     - name: fedora-aarch64-linux-simple
       sudo: required
       env:
@@ -90,6 +109,12 @@ matrix:
         - ARCH=aarch64
       <<: *test_arch_simple
     # PowerPC, 64-bit, Big-endian
+    - name: fedora-ppc64-linux
+      sudo: required
+      env:
+        - OS_NAME=fedora
+        - OS_VERSION=25
+        - ARCH=ppc64
     - name: fedora-ppc64-linux-simple
       sudo: required
       env:
@@ -98,7 +123,9 @@ matrix:
         - ARCH=ppc64
       <<: *test_arch_simple
   allow_failures:
+    - name: centos-ppc64-linux
     - name: centos-ppc64-linux-simple
+    - name: fedora-ppc64-linux
   fast_finish: true
 before_install:
   # Show environment.
@@ -115,6 +142,7 @@ install:
       --build-arg OS_NAME=${OS_NAME} \
       --build-arg OS_VERSION=${OS_VERSION} \
       --build-arg ARCH=${ARCH} \
+      -f Dockerfile-${OS_NAME} \
       .
 script:
   - docker run --rm -t sample ./sample_test.sh
