--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,6 @@ os: linux
         travis_retry docker build --rm -t sample \
           --build-arg ARCH=${ARCH} \
           --build-arg BASE_IMAGE=${BASE_IMAGE} \
-          --build-arg QEMU_INTERPRETER=${QEMU_INTERPRETER} \
           -f Dockerfile-${OS_NAME} \
           .
     script:
@@ -97,7 +96,6 @@ matrix:
       env:
         - ARCH=aarch64
         - BASE_IMAGE=arm64v8/ubuntu
-        - QEMU_INTERPRETER=qemu-aarch64-static
         - OS_NAME=ubuntu-qemu
       <<: *test_in_container_qemu_interpreter
     - name: ubuntu-aarch64-linux-register
@@ -111,9 +109,8 @@ matrix:
       <<: *test_in_container
     - name: ubuntu-arm32-linux-qemu-interpreter
       env:
-        - ARCH=armhf
+        - ARCH=arm
         - BASE_IMAGE=arm32v7/ubuntu
-        - QEMU_INTERPRETER=qemu-arm-static
         - OS_NAME=ubuntu-qemu
       <<: *test_in_container_qemu_interpreter
     - name: ubuntu-arm32-linux-register
@@ -140,7 +137,6 @@ matrix:
       env:
         - ARCH=s390x
         - BASE_IMAGE=s390x/ubuntu
-        - QEMU_INTERPRETER=qemu-s390x-static
         - OS_NAME=ubuntu-qemu
       <<: *test_in_container_qemu_interpreter
     # PowerPC, 64-bit, Big-endian
