--- a/Dockerfile-fedora
+++ b/Dockerfile-fedora
@@ -9,6 +9,10 @@ ENV WORK_DIR "/work"
 
 RUN uname -a
 RUN echo -e "deltarpm=0\ninstall_weak_deps=0\ntsflags=nodocs" >> /etc/dnf/dnf.conf
+# Disable modular repositories to save a running time of "dnf update"
+# if they exists.
+RUN ls /etc/yum.repos.d/*.repo
+RUN sed -i '/^enabled=1$/ s/1/0/' /etc/yum.repos.d/*-modular.repo || true
 RUN dnf -y update
 RUN dnf -y --allowerasing install \
   file \
